# first-app

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLEANUP_CANDIDATES.md  CLEANUP_REPORT_v1.5.0.md  CODEX_MASTER_PLAN.md  CODEX_PLAN_v1.3.2.md  DEPLOYMENT_HANDOFF.md  DEPLOYMENT_HANDOFF_v1.3.2.md  DEPLOYMENT_HANDOFF_v1.5.0.md  Dockerfile  PHYSICS_VALIDATION.md  PRE_CLEANUP_STATE.md  Procfile  README.md  RELEASE_NOTES_v1.5.0-alpha.1.md  RELEASE_NOTES_v1.5.0.md  SECURITY_REVIEW.md  pyproject.toml  requirements-docs.txt  requirements.txt  run_webapp.py  start_webapp.py
examples/: advanced_frame_project.json  cantilever_beam.json  dynamics_collision_v1.5.json  dynamics_track_rolling_v1.5.json  dynamics_variable_field_v1.5.json  simply_supported_uniform_beam.json
tests/: auth_client.test.js  auth_ui_contract.test.js  avatar_layout.test.js  dynamics_contact.test.js  dynamics_core.test.js  dynamics_examples.test.js  dynamics_expression.test.js  dynamics_field_placement.test.js  dynamics_fields.test.js  dynamics_report.test.js  dynamics_rigid_body.test.js  dynamics_tracks.test.js  dynamics_v15_ui.test.js  dynamics_world.test.js  entitlements_ui.test.js  imported_text_safety.test.js  project_adapter.test.js  project_schema.test.js  release_ui.test.js  test_auth.py  test_auth_http.py  test_auth_webapp.py  test_diagnostics.py  test_engine_diagnostics.py  test_entitlements.py  test_entitlements_webapp.py  test_manual_download.py  test_moment_release.py  test_point_element_load.py  test_point_global_webapp.py  test_project_io.py  test_public_manual.py  test_report.py  (+5 more)
(+66 files in other folders)
