[project]
name = "mechanics-mvp"
version = "1.5.0a1"
description = "MVP backend solver for 2D frame mechanics projects."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "reportlab>=4.0",
    "pypdf>=5.0",
    "argon2-cffi>=23.1,<26",
    "Pillow>=10.0",
    "psycopg[binary]>=3.2,<4",
]

[project.scripts]
mechanics-mvp = "mechanics_mvp.cli:main"
mechanics-web = "mechanics_mvp.webapp:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mechanics_mvp = ["migrations/*.sql"]
